--- a/cat_notcat.ipynb
+++ b/cat_notcat.ipynb
@@ -186,7 +186,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#RANDOM FOREST\n",
+        "#SVM\n",
         "from sklearn.svm import SVC\n",
         "\n",
         "RF_model = SVC(kernel='linear')\n",
